# fbpage-to-wordpress

./: .env.example  .gitignore  README.md  main.py  prompt-content-refine.md  prompt-featured-image.md  pyproject.toml
src/fbpost_to_wordpress/: __init__.py  cli.py  config.py  facebook.py  models.py  notifier.py  openrouter.py  pipeline.py  scheduled.py  storage.py  utils.py  wordpress.py
src/fbpost_to_wordpress.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_facebook.py  test_ntfy.py  test_openrouter.py  test_pipeline.py  test_redacted_parser.py  test_scheduled.py  test_storage.py  test_utils.py  test_wordpress.py
